# no-os

./: .gitignore  Cargo.toml  Makefile  Makefile-old  OVMF_CODE.fd  OVMF_VARS-pure-efi.fd  build.rs  makefile
.cargo/: config.toml
esp/: NvVars  no_bootstrap.efi  no_kernel.elf  no_kernel.elf.id0  no_kernel.elf.id1  no_kernel.no  startup.nsh
esp/efi/: no_kernel.no
esp/efi/boot/: bootx64.efi
kernel_build/: kernel.img  kernel.no  kernel_bios.img  kernel_uefi.img
no_bootloader/: Cargo.toml
no_bootloader/src/: main.rs
no_bootstrap/: Cargo.toml
no_bootstrap/.cargo/: config.toml
no_bootstrap/src/: main.rs
no_kernel/: Cargo.toml  bootstrap.asm  build.rs  linker copy.ld  linker.ld
no_kernel/.cargo/: config.toml
no_kernel/src/: basicRenderer.rs  kernel.rs  lib.rs  main.rs  renderer.rs  vga_buffer.rs
no_kernel_args/: Cargo.toml
no_kernel_args/src/: lib.rs
src/: kernel.no  main.rs
