[package]
name = "no_bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = { version = "0.7.1", features = [
    "elf32",
    "elf64",
    "alloc",
    "archive",
    "endian_fd",
], default-features = false }
uefi = "*"
uefi-services = "*"
uefi-raw = "*"
no_kernel_args = { path = "../no_kernel_args" }
