[package]
name = "no_kernel"
version = "0.1.0"
edition = "2021"


[lib]
name = "no_kernel"
crate-type = ["staticlib","rlib"]
path="src/kernel.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spin="0.5.2"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
